creando responsividad y optimizando codigo css

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,7 +16,7 @@
 }
 
 .logo-alura:hover{
-    transform: translateY(10px);
+    transform: translateY(15px);
 }
 
   .app {
@@ -31,8 +31,9 @@
     display: grid;
     grid-template-columns: repeat(12, 1fr);
     gap: 20px;
-    height: calc(100vh - 120px);
-    padding-top: 40px;
+    min-height: calc(100vh - 120px);
+    height: auto;
+    padding: 40px 0;
   }
   
   .app .grid .app-content {
@@ -42,7 +43,6 @@
     display: flex;
     flex-direction: column;
     gap: 60px;
-    overflow: visible;
   }
 
   .app .grid .app-content label {
@@ -62,9 +62,11 @@
     flex-direction: column;
     gap: 16px;
     text-align: center;
-    padding: 32px;
+    padding: 42px;
     align-items: center;
     justify-content: center;
+    height: auto;
+    overflow-wrap: break-word;
   }
   
   .app-encript {
@@ -76,35 +78,29 @@
     min-width: 100%;
     border: none;
     max-height: 80%;
-    min-height: 80%;
+    min-height: 300px;
     background: transparent;
     resize: none;
   }
 
-  .text-encript {
+  .text-encript,.text-encript::placeholder  {
     color: var(--color-primary);
     font-family: "Inter", sans-serif ;
     font-size: 32px;
     text-align: left;
   }
 
-  .text-encript::placeholder {
-    color: var(--color-primary);
-    font-family: "Inter", sans-serif ;
-    font-size: 32px;
-    text-align: left;
-  }
- 
-  
   .app-main-btns {
     margin-top: 8px;
     display: flex;
     gap: 24px;
     justify-content: center;
+    position: relative;
   }
   
-  .app-main-btns button {
-    width: 328px;
+  button {
+    position: relative;
+    width: 100%;
     height: 67px;
     border-radius: 24px;
     cursor: pointer;
@@ -146,6 +142,7 @@
     color: var(--color-secondary);
     font-family: "Inter", sans-serif;
     font-size: 16px;
+    width: 100%;
   }
   
   .app .grid .app-result img {
@@ -157,9 +154,8 @@
 
   .container-hidden {
     display: none;
+    width: 100%;
   }
-
-
 
   /*Colocando estilos a las alertas*/
   .swal2-title {
@@ -179,12 +175,16 @@
  
   /*vista tablet */
   @media (max-width: 768px){
-    
+    .app .grid .app-content, .app .grid .app-result {
+      grid-column: span 12;
+    }
   }
   
 
   /*Vista de celular*/
   @media (max-width: 375px){
-    
+    .app-main-btns {
+      flex-direction: column;
+    }
   }
 
